...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.VinilosApplication.PopupOverlay"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

        <LinearLayout
            android:id="@+id/buttonVisitor"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
...
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/buttonCollector"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">
...
                android:gravity="center_vertical"
                android:text="@string/collector"
                android:textAlignment="inherit"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:overlapAnchor="false"
                android:layout_height="48dp"
                android:textSize="16sp"/>
...
