...
        android:icon="@drawable/menu"
        android:orderInCategory="100"
        android:title="@string/title_menu"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_album"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/album_add_album"
        android:visible="false"
        app:showAsAction="always"/>
    <item
...
