<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TrackCreateFragment"
    android:orientation="vertical"
    android:layout_gravity="top">

    <data>
        <variable
            name="track"
            type="co.edu.uniandes.miswmobile.vinilosapp.models.Track" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="36dp"
            android:paddingTop="0dp"
            android:paddingRight="36dp"
            android:paddingBottom="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/black"
                android:hint="@string/track_name_placeholder"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:required="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/black"
                android:hint="@string/track_duration_placeholder"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/duration_track"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- NumberPicker para minutos -->
                    <NumberPicker
                        android:id="@+id/minutesPicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="@color/black"
                        android:descendantFocusability="beforeDescendants"
                        android:max="59" />

                    <!-- Etiqueta para separar minutos y segundos -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":" />

                    <!-- NumberPicker para segundos -->
                    <NumberPicker
                        android:id="@+id/secondsPicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="@color/black"
                        android:descendantFocusability="beforeDescendants"
                        android:max="59" />

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelTrack"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:enabled="true"
                    android:gravity="start"
                    android:text="@string/action_cancel" />

                <Button
                    android:id="@+id/saveTrack"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:enabled="false"
                    android:gravity="end"
                    android:text="@string/action_save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>